--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,9 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<a href="/">Home</a>
+		<a href="/Blog/">Blog</a>
+		<a href="/about/">About</a>
+		<h1>My Astro Site</h1>
 	</body>
 </html>
